@@ -1,3 +1,8 @@
+2018-06-29  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/86184
+	* g++.dg/ext/cond3.C: New test.
+
 2018-06-29  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	* gcc.target/arm/arm-soft-strd-even.c: New test.
